// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VestTest TestObject constructor 1`] = `
VestTest {
  "fieldName": "unicycle",
  "id": "0",
  "message": "I am Root.",
  "severity": "error",
  "status": "UNTESTED",
  "testFn": [MockFunction],
}
`;

exports[`VestTest testObject.warn Should mark the test as warning 1`] = `
VestTest {
  "fieldName": "unicycle",
  "id": "102",
  "message": "I am Root.",
  "severity": "warning",
  "status": "UNTESTED",
  "testFn": [MockFunction],
}
`;
